; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/unit_test/main/extr_example_unit_test_main.c_app_main.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/unit_test/main/extr_example_unit_test_main.c_app_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [65 x i8] c"In main application. Collecting %d random numbers from 1 to %d:\0A\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"%4d \00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"\0AMean: %d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @app_main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 32, i32* %1, align 4
  store i32 100, i32* %2, align 4
  %6 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([65 x i8], [65 x i8]* @.str, i64 0, i64 0), i32 32, i32 100)
  %7 = call i32* @calloc(i32 32, i32 4)
  store i32* %7, i32** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %32, %0
  %9 = load i32, i32* %4, align 4
  %10 = icmp slt i32 %9, 32
  br i1 %10, label %11, label %35

11:                                               ; preds = %8
  %12 = call i32 (...) @esp_random()
  %13 = srem i32 %12, 99
  %14 = add nsw i32 1, %13
  %15 = load i32*, i32** %3, align 8
  %16 = load i32, i32* %4, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds i32, i32* %15, i64 %17
  store i32 %14, i32* %18, align 4
  %19 = load i32*, i32** %3, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i32 %23)
  %25 = load i32, i32* %4, align 4
  %26 = add nsw i32 %25, 1
  %27 = srem i32 %26, 10
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %31

29:                                               ; preds = %11
  %30 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  br label %31

31:                                               ; preds = %29, %11
  br label %32

32:                                               ; preds = %31
  %33 = load i32, i32* %4, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %4, align 4
  br label %8

35:                                               ; preds = %8
  %36 = load i32*, i32** %3, align 8
  %37 = call i32 @testable_mean(i32* %36, i32 32)
  store i32 %37, i32* %5, align 4
  %38 = load i32, i32* %5, align 4
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i32 %38)
  %40 = load i32*, i32** %3, align 8
  %41 = call i32 @free(i32* %40)
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32* @calloc(i32, i32) #1

declare dso_local i32 @esp_random(...) #1

declare dso_local i32 @testable_mean(i32*, i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
